add new things. edit response cookie

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
         
         <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/vuesample">Vue Sample</a></li>
+        <li><a href="/sample/vue">Vue Sample</a></li>
         <li><a href="/users/add">Add user</a></li>
         </ul>
         </div>
