--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -31,6 +31,10 @@
 <label for="email">Email</label>
 <input class="form-control" v-model="user.email">
 </div>
+<div class="form-group">
+    <label for="password">Password</label>
+    <input class="form-control" v-model="user.password">
+</div>
 
 <div>
 <button v-on:click="submitForm" class="btn btn-info">Submit</button>
@@ -60,7 +64,8 @@ user: {
 username: '',
 firstname: '',
 lastname: '',
-email: ''
+email: '',
+password:''
 },
 response: 'Server response will be shown here'
 },
