--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <% include ../partials/head %>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
+
 </head>
 <body class="container">
 
@@ -12,18 +16,18 @@
 <main id="app">
 
   <div>
-    <form action="/users/login" method="post">
+    <form>
       <div class="form-group">
-        <label for="username">UserName</label>
-        <input  class="form-control"  name="username">
+        <label for="username">Username</label>
+        <input  class="form-control"  name="username" v-model="user.username">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input  class="form-control" name="password" type="password">
+        <input  class="form-control" name="password" type="password" v-model="user.password">
       </div>
       <div>
-        <button class="btn btn-info">Login</button>
-        <button class="btn btn-warning">Cancel</button>
+        <button class="btn btn-info"  v-on:click="submitForm" >Login</button>
+        <button class="btn btn-warning" v-on:click="clear" >Cancel</button>
       </div>
     </form>
   </div>
@@ -34,4 +38,36 @@
 </footer>
 
 </body>
+
+<script>
+
+  var app = new Vue({
+    el: '#app',
+    data: {
+      user: {
+        username: '',
+        password: ''
+      }
+    },
+    methods: {
+      submitForm: function (e) {
+        let me = this;
+        e.preventDefault();
+        axios.post('/users/login', this.user)
+        .then(function (response) {
+          location.href = '/sample/vue';
+        })
+        .catch(function (error) {
+          console.log(error);
+        })
+      },
+      clear: function () {
+        this.user.username = '';
+        this.user.password = '';
+      }
+    }
+  });
+
+
+</script>
 </html>
